[project]
name = "batch-modify-excel"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "theocheng", email = "zlz_gty@foxmail.com" }]
dependencies = [
    "openpyxl>=3.1.5",
    "pyinstaller>=6.11.0",
    "ttkbootstrap>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"test" = "batch_modify_excel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/batch_modify_excel"]
